--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="item active">
                 <img src="./img/01.webp" alt="">
                 <div class="position-absolute bottom-50 text-right color-white padding-text">
-                    <h2>Marvel\'s Spiderman Miles Morale</h2>
+                    <h2>Marvel's Spiderman Miles Morale</h2>
                     <h5>Experience the rise of Miles Morales as the new hero masters incredible, explosive new powers to become his own Spider-Man.</h5>
                 </div>
             </div> 
