[UPDATE] added menu image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
         </div>
         <div class="list-image">
+            <img src="./img/01.webp" alt="" id="photo0">
+            <img src="./img/02.webp" alt="" id="photo1">
+            <img src="./img/03.webp" alt="" id="photo2">
+            <img src="./img/04.webp" alt="" id="photo3">
+            <img src="./img/05.webp" alt="" id="photo4">
+            
             <div class="prev"></div>
             <div class="next"></div>
         </div>
