[UPDATE] pause button added

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
             <div class="prev"></div>
             <div class="next"></div>
         </div>
+
+        <div class="container_2">
+            <div id="pauseButton" class="button_console">Metti in pausa</div>
+            <div id="invertButton" class="button_console">Inverti andamento</div>
+        </div>
+        
    </div>
+   
+   
+   
+   
 
    <script src="js/script.js"></script>
 </body>
